# kalve

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README.ru.md  pyproject.toml
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  BRAND_KIT_GUIDE.md
examples/: demo_startup.json  saunuole_apologies.json  saunuole_compliments.json
kalve/: __init__.py  __main__.py  brand.py  colors.py  drawing.py  typography.py
kalve/brands/: __init__.py  default_dark.py  default_light.py  saunuole.py
kalve/templates/: __init__.py  three_tiers.py
