[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalve"
version = "0.1.0"
description = "Carousels-as-code — generate brand-consistent social-media carousels from JSON specs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Anna Ladutko", email = "anna380980935152@gmail.com" },
]
keywords = [
    "carousels",
    "social-media",
    "instagram",
    "threads",
    "indie-hackers",
    "branding",
    "image-generation",
    "carousels-as-code",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/anna-ladutko/kalve"
Repository = "https://github.com/anna-ladutko/kalve"
Issues = "https://github.com/anna-ladutko/kalve/issues"

[project.scripts]
kalve = "kalve.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["kalve"]

[tool.hatch.build.targets.sdist]
include = [
    "/kalve",
    "/README.md",
    "/README.ru.md",
    "/LICENSE",
    "/CONTRIBUTING.md",
    "/CLAUDE.md",
    "/docs",
    "/examples",
]
